# pickle-secure

./: .gitignore  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CLASSIFIERS.txt  KEYWORDS.txt  LICENSE.txt  Makefile  README.md  README.rst  _utils.py  encryption.py  makefile  mkdocs.yml  psec.py  pyproject.toml  requirements.txt  requirements_test.txt  setup.py  test_encryption.py  test_utils.py
.github/workflows/: lint.yml  test.yml  tests.yml
docs/: CHANGELOG.md  README.md  installation.md  usage.md
docs/source/: conf.py  installation.rst  usage.rst
pickle_secure/: __init__.py  _settings.py  _utils.py  pickle_secure.py  psec.py
src/pickle_secure/: __init__.py  __version__.py  pickle_secure.py  utils.py
tests/: test_utils.py  test_version.py
tests/pickle_secure/: test_pickle_secure.py  test_utils.py
tests/test_picke_secure/: test_utils.py
