[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py37", "py38", "py39", "py310", "py311"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_reexport = true
show_error_codes = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
warn_unused_configs = true

[tool.ruff]
select = [
    "A",
    "ARG",
    "B",
    "BLE",
    "C4",
    "DTZ",
    "E",
    "ERA",
    "EXE",
    "F",
    "FBT",
    "G",
    "I",
    "INP",
    "ISC",
    "N",
    "PGH",
    "PIE",
    "PLC",
    "PLE",
    "PLW",
    "PTH",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "T10",
    "TID",
    "TRY",
    "UP",
    "W",
]
ignore = [
    "E501",
    "TRY003",
]
src = ["src"]
target-version = "py38"

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.flake8-tidy-imports.banned-api]
"mock".msg = "Use unittest.mock"
"pytz".msg = "Use zoneinfo"

[tool.pytest.ini_options]
addopts = "-vv --cov --cov-report=term-missing:skip-covered"
testpaths = "tests"

[tool.coverage.run]
source = ["src/"]
data_file = ".cov_cache/coverage.dat"

[tool.poetry]
name = "pickle_secure"
version = "0.9.99"
description = "Easily create encrypted pickle files"
authors = [
    "Stephanos Kuma <stephanos@kuma.ai>",
]

license = "LGPL-3.0+"
readme = "README.rst"

repository = "https://github.com/spapanik/pickle-secure"

keywords=["pickle", "AES", "secure storage"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
# python version
python = "^3.7"

# dependencies
cryptography = ">=36.0,<39.0"

[tool.poetry.group.dev.dependencies]
ipdb = {version = "^0.13", python = "^3.10"}
ipython = {version = "^8.11", python = "^3.10"}
pipdeptree = "^2.5"

[tool.poetry.group.lint.dependencies]
black = "^23.1"
mypy = "^1.0"
ruff = "^0.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.1"
pytest-cov = "^4.0"

[tool.poetry.group.docs.dependencies]
sphinx = {version = "^5.2", python = "^3.10"}
sphinx-rtd-theme = {version = "^1.0", python = "^3.10"}
